<resources>
    <string name="app_name">P05 Quiz</string>

    <string name="ticketType">Ticket Type</string>
    <string name="oneWay">One Way</string>
    <string name="roundTrip">Round Trip</string>
    <string name="noPax">Number of pax</string>
    <string name="paxPlaceHolder">0</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnSubmit">Submit</string>
</resources>
