<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTicketType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticketType" />

        <CheckBox
            android:id="@+id/cbOneWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneWay" />

        <CheckBox
            android:id="@+id/cbRoundTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundTrip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoPax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noPax" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMinus" />

        <TextView
            android:id="@+id/tvNoPaxSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paxPlaceHolder"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit" />
</LinearLayout>